♻️ Final instructor review pipeline + dashboard fixes

--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -301,7 +301,9 @@
    <!-- Hidden inputs to capture toggle state -->
     <input type="hidden" name="requires_review" id="requiresReviewValue" />
     <input type="hidden" name="gospel_enabled" id="gospelEnabledValue" />
-    <input type="hidden" name="instructor_approval" id="instructorApprovalValue" value="false" />
+    <input type="hidden" name="instructor_approval" value="false" />
+    <input type="checkbox" id="instructorApprovalCheckbox" name="instructor_approval" value="true" style="display: none;" />
+
 
 
     <div id="saveButtonWrapper">
