--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -212,6 +212,9 @@
 
       <div class="tabs">
         <button class="tab-button active" onclick="showTab('setup')">Assignment Setup</button>
+        <a href="/view-assignments" style="text-decoration: none;">
+          <button class="tab-button">Edit Assignments</button>
+        </a>
         <button class="tab-button" onclick="showTab('gospel')">Gospel-Centered</button>
         <button class="tab-button" onclick="showTab('instructor')">Instructor Review</button>
         <button class="tab-button" onclick="showTab('logs')">Activity Logs</button>
