--- a/templates/view_assignments.html
+++ b/templates/view_assignments.html
@@ -85,6 +85,11 @@
       text-align: center;
       margin-top: 2rem;
     }
+    .logo {
+      max-height: 80px;
+      width: auto;
+      margin-right: 1.5rem;
+    }
   </style>
 </head>
 <body>
