--- a/templates/edit_assignment.html
+++ b/templates/edit_assignment.html
@@ -194,7 +194,7 @@
           <div style="font-size: 0.85rem; color: #aaa;">by J. Baker Design</div>
         </div>
       </div>
-    <h2 class="title">Edit Assignment</h2>
+    <h2 class="title">Manage Assignments</h2>
 
     <form method="post" enctype="multipart/form-data">
 
