Add delete button for rubric and additional files

--- a/templates/edit_assignment.html
+++ b/templates/edit_assignment.html
@@ -207,9 +207,9 @@
           <input type="file" name="rubric_file" id="rubric_file" />
         </div>
 
-        {% if assignment.rubric_filename %}
+        {% if assignment.rubric_file %}
           <div style="margin-top: 0.5rem;">
-            <span>{{ assignment.rubric_filename }}</span>
+            <span>{{ assignment.rubric_file }}</span>
             <button type="button" class="submit-button" onclick="deleteFile('{{ assignment.assignment_id }}', 'rubric')">❌ Remove</button>
           </div>
         {% endif %}
@@ -217,18 +217,19 @@
 
         <div class="form-group third">
           <label for="additional_file">Additional File</label>
+        
           {% if assignment.additional_file %}
-            <p class="instruction-note">Current: <a href="{{ assignment.additional_file }}" target="_blank">View</a></p>
+            <p class="instruction-note">
+              Current: <a href="{{ assignment.additional_file }}" target="_blank">View</a>
+            </p>
+            <div style="margin-top: 0.5rem;">
+              <span>{{ assignment.additional_filename }}</span>
+              <button type="button" class="submit-button" onclick="deleteFile('{{ assignment.assignment_id }}', 'additional')">❌ Remove</button>
+            </div>
           {% endif %}
+        
           <input type="file" name="additional_file" id="additional_file" />
         </div>
-
-        {% if assignment.additional_filename %}
-          <div style="margin-top: 0.5rem;">
-            <span>{{ assignment.additional_filename }}</span>
-            <button type="button" class="submit-button" onclick="deleteFile('{{ assignment.assignment_id }}', 'additional')">❌ Remove</button>
-          </div>
-        {% endif %}
 
 
         <div class="form-group third">
