--- a/templates/edit_assignment.html
+++ b/templates/edit_assignment.html
@@ -296,7 +296,7 @@
     function deleteFile(assignmentId, fileType) {
       if (!confirm("Are you sure you want to remove this file?")) return;
   
-      fetch('/notes/delete-file', {
+      fetch('/delete-file', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({
@@ -326,7 +326,7 @@
     function confirmDeleteAssignment(assignmentId) {
       if (!confirm("Are you sure you want to delete this assignment permanently?")) return;
   
-      fetch('/notes/delete-assignment', {
+      fetch('/delete-assignment', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ assignment_id: assignmentId })
